# family_budget

./: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: export_onnx.py  inspect_config.py  requirements.txt  setup_ort.py
src/: App.css  App.jsx  App.tsx  constants.js  main.jsx  main.tsx  utils.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/ai/: classifier.rs  mod.rs  model.rs
src/components/: Dashboard.jsx  Dashboard.tsx  Import.jsx  Import.tsx  Settings.jsx  Settings.tsx  Transactions.jsx
src/lib/: api.js  csvParser.ts  storage.ts  types.ts
