[package]
name = "tauri-appfamily-budget"
version = "0.1.0"
description = "Family budget"
authors = ["Oleksandr Tkachuk"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appfamily_budget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
burn = { version = "0.20", features = ["wgpu", "train"] }
tokenizers = { version = "0.19", features = ["http"] } # http feature for downloading tokenizer.json if needed, or just default
tokio = { version = "1.0", features = ["full"] } # Ensure tokio is full for async AI init

